--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="js/dist/script.min.js"></script>
     <link rel="stylesheet" href="css/main.css"><!-- Подключаем CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- Fotorama -->
     <link href="css/fotorama.css" rel="stylesheet">
 
@@ -26,7 +27,7 @@
 
   <nav>
     <ul>
-      <li><a class="blue" href="#">HOME</a></li>
+      <li class="blue"><a href="#">HOME</a></li>
       <li><a href="#">FEATURES</a></li>
       <li><a href="#">SERVICES</a></li>
       <li><a href="#">NEWS</a></li>
@@ -62,6 +63,35 @@
       <h3>Fast Support</h3>
       <p>Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique</p>
       <a href="#">Read More</a>
+    </div>
+
+  </div>
+</div>
+
+<div class="container">
+
+  <div class="our_services">
+    <h3>Our Services</h3>
+    <div class="all_services">
+      <div class="schedule_srvices">
+        <img src="img/Untitled-10.png"/>
+        <a href="#">Schedule Srvices</a>
+      </div>
+
+      <div class="preventiv_maintence">
+        <img src="img/rdJD.png"/>
+        <a href="#">Preventiv Maintence</a>
+      </div>
+
+      <div class="wheel_srvices">
+        <img src="img/Rectangle.png"/>
+        <a href="#">Tire &#38; Whell Services</a>
+      </div>
+
+      <div class="repair_services">
+        <img src="img/Selective.png"/>
+        <a href="#">Repair Services</a>
+      </div>
     </div>
 
   </div>
