--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
   </div>
 
   <div class="text-container">
+
     <div class="power">
       <img src="img/settings.png"/>
       <h3>Power Inside</h3>
@@ -95,8 +96,73 @@
     </div>
 
   </div>
+</div>
+
+<div class="news">
 
 </div>
+
+<div class="brend-icons">
+  <img src="img/labe.png"/>
+</div>
+
+<div class="foot_link">
+  <div class="link_box">
+    <div class="socials">
+      <h4>SOCIALS</h4>
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Flickr</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li class="last_link"><a href="#">Vimeo</a></li>
+      </ul>
+    </div>
+
+    <div class="links">
+      <h4>LINKS</h4>
+      <ul>
+        <li><a href="#">How to Write a Blog</a></li>
+        <li><a href="#">Create Blog in 4 Steps</a></li>
+        <li><a href="#">15 Tips to Increase Traffic</a></li>
+        <li class="last_link"><a href="#">20 Blog Post Ideas</a></li>
+      </ul>
+    </div>
+
+    <div class="blogroll">
+      <h4>BLOGROLL</h4>
+      <ul>
+        <li><a href="#">Blogs Slog</a></li>
+        <li><a href="#">Rol Up Rol Up</a></li>
+        <li><a href="#">Blog Free</a></li>
+        <li class="last_link"><a href="#">Wordpress Blog</a></li>
+      </ul>
+    </div>
+
+    <div class="about_us">
+      <h4>ABOUT US</h4>
+      <ul>
+        <li><a href="#">Agriculture</a></li>
+        <li><a href="#">Harvest</a></li>
+        <li><a href="#">Company news</a></li>
+        <li class="last_link"><a href="#">Investor relations</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<footer>
+  <div class="footer_container">
+    <div class="contact_inform">
+      <p class="locate">BuildHomeLtd. Street Name 123 23 45 Cityname</p>
+      <p class="phone">+123 900 123 456</p>
+      <p class="mail">info@buildhome.web</p>
+    </div>
+
+    <div class="tm">
+      <p>&#169; 2014 Build Home</p>
+    </div>
+  </div>
+</footer>
 
 
   </body>
