--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,10 @@
 
   <div class="text-container">
 
+    <div class="num">
+      <p>01</p>
+    </div>
+
     <div class="power">
       <img src="img/settings.png"/>
       <h3>Power Inside</h3>
@@ -52,11 +56,19 @@
       <a href="#">Read More</a>
     </div>
 
+    <div class="num">
+      <p>02</p>
+    </div>
+
     <div class="techno">
       <img src="img/params.png"/>
       <h3>New Technologies</h3>
       <p>Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique</p>
       <a href="#">Read More</a>
+    </div>
+
+    <div class="num">
+      <p>03</p>
     </div>
 
     <div class="support">
@@ -99,6 +111,78 @@
 </div>
 
 <div class="news">
+  <div class="all_news">
+
+    <div class="latest_news">
+      <h2>Latest News</h2>
+      <div class="head_box">
+        <div class="advanced_machinery">
+          <h4>Advanced Machinery Helps Improve Quality</h4>
+
+          <div class="under_text">
+            <span>by</span>
+            <p>cmsmaster</p>
+            <span>Comments</span>
+            <p>(6)</p>
+          </div>
+
+          <p>
+            Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.
+          </p>
+        </div>
+      </div>
+
+      <div class="foot_box">
+        <div class="powerful">
+          <h4>Powerful Techniques for Advanced Service</h4>
+
+          <div class="under_text">
+            <span>by</span>
+            <p>cmsmaster</p>
+            <span>Comments</span>
+            <p>(3)</p>
+          </div>
+
+          <p>
+            Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion">
+      <ul>
+        <li>
+          <input type="checkbox" checked>
+          <h5>Accordion Panel 1</h5>
+          <p>
+            Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur
+          </p>
+        </li>
+        <li>
+          <input type="checkbox" checked>
+          <h5>Accordion Panel 2</h5>
+          <p>
+            Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur
+          </p>
+        </li>
+        <li>
+          <input type="checkbox" checked>
+          <h5>Accordion Panel 3</h5>
+          <p>
+            Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur
+          </p>
+        </li>
+        <li>
+          <input type="checkbox" checked>
+          <h5>Accordion Panel 4</h5>
+          <p>
+            Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
 
 </div>
 
